--- a/views/login.ejs
+++ b/views/login.ejs
@@ -75,6 +75,12 @@
             animation: dukdik 1s ease-in-out infinite;
         }
 
+        .register-content {
+            display: flex;
+            justify-content: center;
+            margin-top: 1vh;
+        }
+
 
         .E-box {
             position: relative;
@@ -248,6 +254,10 @@
                 </div>
             </form>
         </div>
+    </div>
+
+    <div class="register-content">
+        <a href="/register" class="btn btn-warning register-btn">Register here</a>
     </div>
 
     <script>
