--- a/views/login.ejs
+++ b/views/login.ejs
@@ -220,6 +220,13 @@
                 margin-top: 2vh;
             }
         }
+        @media only screen and (max-width: 480px) and (orientation: portrait) {
+            body {
+                background-repeat: no-repeat;
+                background-attachment: fixed;
+                background-position: center;
+            }
+            }
     </style>
 
 </head>
@@ -228,14 +235,14 @@
     <div class="pic-icon"></div>
     <div class="topic">
 
-        <div class="E-box">
+        <!-- <div class="E-box">
             <span class="letter"><h1>E</h1></span>
             <div class="line"></div>
         </div>
 
         <h1>-</h1>
-        <span class="mid-letter"><h1>Supplier </h1></span>
-        <span class="last-letter"><h1>Login</h1></span>
+        <span class="mid-letter"><h1>Supplier </h1></span> -->
+        <span class="last-letter"><h1>E-Smart Supply Chain|Login</h1></span>
     </div>
 
     <div class="container">
@@ -250,7 +257,7 @@
                     <input type="password" class="form-control" name="password" id="password" placeholder="Enter your password">
                 </div>
                 <div class="btn-login">
-                    <button type="submit" class="btn btn-primary">Log In</button>
+                    <button type="submit" class="btn btn-secondary">Log In</button>
                 </div>
             </form>
         </div>
