--- a/views/master_setting.ejs
+++ b/views/master_setting.ejs
@@ -35,7 +35,7 @@
                         <th>PART NAME</th>
                         <th>BOX NO.</th>
                         <th>QTY</th>
-                        <th>COUNT BOX</th>
+                        <!-- <th>COUNT BOX</th> -->
                         <th>DNTH Receive</th>
                         <th>Actions</th>
                     </tr>
@@ -52,7 +52,7 @@
                         <td style="<% if (master_data.is_fac1_receive.toString('hex') === '01') { %> background-color: rgb(143, 229, 158);; <% } %>"><%= master_data.partName %></td>
                         <td style="<% if (master_data.is_fac1_receive.toString('hex') === '01') { %> background-color: rgb(143, 229, 158);; <% } %>"><%= master_data.qr_box %></td>
                         <td style="<% if (master_data.is_fac1_receive.toString('hex') === '01') { %> background-color: rgb(143, 229, 158);; <% } %>"><%= master_data.qty %></td>
-                        <td style="<% if (master_data.is_fac1_receive.toString('hex') === '01') { %> background-color: rgb(143, 229, 158);; <% } %>"><%= master_data.boxCount %></td>
+                        <!-- <td style="<% if (master_data.is_fac1_receive.toString('hex') === '01') { %> background-color: rgb(143, 229, 158);; <% } %>"><%= master_data.boxCount %></td> -->
                         <td style="<% if (master_data.is_fac1_receive.toString('hex') === '01') { %> background-color: rgb(143, 229, 158);; <% } %>"><%= is_fac1_receive %></td>
                         <td>
                             <a class="btn btn-primary" href="/admin_page/master_setting/edit?qr_box=<%= master_data.qr_box %>&qr_packingList=<%= master_data.qr_packingList %>">Edit</a>
@@ -61,13 +61,13 @@
                     </tr>
                     <% }) %>
                     <tr>
-                        <td><div id="no" class="no"></div></td>
+                        <td><div id="no" class="no">Add here</div></td>
                         <td><input type="text" name="qr_packingList" id="qr_packingList" class="qr_packingList"></td>
                         <td><input type="text" name="part_number" id="part_number" class="part_number"></td>
                         <td><input type="text" name="part_name" id="part_name" class="part_name"></td>
                         <td><input type="text" name="box_no" id="box_no" class="box_no"></td>
                         <td><input type="text" name="qty" id="qty" class="qty"></td>
-                        <td><input type="text" name="count_box" id="count_box" class="count_box"></td>
+                        <!-- <td><input type="text" name="count_box" id="count_box" class="count_box"></td> -->
                         <td><input type="checkbox" name="is_fac1_receive" id="is_fac1_receive"></td>
                         <td>
                             <!-- <a class="btn btn-primary" href="#">Edit</a>
@@ -85,7 +85,7 @@
 
     <script>
         // Set the initial value of the "no" div to 1
-        document.getElementById('no').innerText = 1;
+        // document.getElementById('no').innerText = 1;
 
         function confirmDelete(qrBox) {
             if (confirm('Are you sure you want to delete this item?')) {
