--- a/views/receive_scan_sub.ejs
+++ b/views/receive_scan_sub.ejs
@@ -17,6 +17,7 @@
         <a href="/admin_page/master_main">Master Main</a>
         <a href="/admin_page/master_setting">Master Setting</a>
         <a href="/admin_page/receive_scan_master">Receive Scan</a>
+        <a href="/dnth_data">DNTH Data</a>
         <a href="/logout">Logout</a>
     </div>
 
@@ -34,6 +35,10 @@
             <input type="text" id="kanban_date_in" class="kanban_date_in form-control mb-3" name="kanban_date_in" readonly>
             <label for="kanban_time_in" class="kanban_time_in" name="kanban_time_in">KANBAN Time In</label>
             <input type="text" id="kanban_time_in" class="kanban_time_in form-control mb-3" name="kanban_time_in" readonly>
+            <!-- <label for="partNumber" class="partNumber" name="partNumber">Part Number</label>
+            <input type="text" id="partNumber" class="partNumber form-control mb-3" name="partNumber" readonly>
+            <label for="qty" class="qty" name="qty">Qty.</label>
+            <input type="text" id="qty" class="qty form-control mb-3" name="qty" readonly> -->
             <button type="submit" class="btn btn-primary">Submit</button>
         </form>
     </div>
