--- a/views/master_main.ejs
+++ b/views/master_main.ejs
@@ -13,6 +13,7 @@
         <a href="/admin_page/master_main">Master Main</a>
         <a href="/admin_page/master_setting">Master Setting</a>
         <a href="/admin_page/receive_scan_master">Receive Scan</a>
+        <a href="/dnth_data">DNTH Data</a>
         <a href="/logout">Logout</a>
     </div>
 
