--- a/views/dnth_data.ejs
+++ b/views/dnth_data.ejs
@@ -32,7 +32,9 @@
                 <th>KANBAN TIME IN</th>
                 <th>QTY</th>
                 <th>PART NUMBER</th>
+                <th>TOTAL QTY EACH PN</th>
                 <th>DNTH QR PRODUCTION</th>
+                
                 <!-- <th>COUNT BOX</th> -->
                 <!-- <th>DNTH Receive</th> -->
                 <th>Actions</th>
@@ -50,6 +52,7 @@
                 <td><%= dnth_data.kanban_time_in %></td>
                 <td><%= dnth_data.qty_kanban_in %></td>
                 <td><%= dnth_data.partNumber %></td>
+                <td><%= dnth_data.totalQtyIn %></td>
                 <td><%= dnth_data.qr_prod %></td>
                 <td>
                     <a class="btn btn-primary" href="#">Edit</a>
