--- a/views/receive_scan_sub.ejs
+++ b/views/receive_scan_sub.ejs
@@ -119,11 +119,11 @@
 
                 <% if (allReceived) { %>
                     <div>
-                        <h2 style="color: rgb(96, 228, 151);">PASS</h2>
+                        <h2 style="color: rgb(96, 228, 151);">COMPLETED</h2>
                     </div>
                 <% } else { %>
                     <div>
-                        <h2 style="color: rgb(221, 95, 95);">NG</h2>
+                        <h2 style="color: red">NOT COMPLETED</h2>
                     </div>   
                 <% } %>
                 <!-- </tbody>
