--- a/views/dnth_data.ejs
+++ b/views/dnth_data.ejs
@@ -62,6 +62,7 @@
             <% }) %>
         </tbody>
     </table>
+    <a href="/dnth_data/reset_qr_prod" id="btn_reset_qr_prod" name="btn_reset_qr_prod" class="btn btn-danger">Reset DNTH PD QR</a>
 
 
     <script>
