--- a/views/dnth_data.ejs
+++ b/views/dnth_data.ejs
@@ -18,7 +18,8 @@
         <a href="/admin_page/master_setting">Master Setting</a>
         <a href="/admin_page/receive_scan_master">Receive Scan</a>
         <a href="/dnth_data">DNTH Data</a>
-        <a href="/create_work_order">Register QR Production</a>
+        <a href="/pc_page">PC Page</a>
+        <a href="/prod_page">PD Page</a>
         <a href="/logout">Logout</a>
     </div>
 
@@ -63,6 +64,7 @@
         </tbody>
     </table>
     <a href="/dnth_data/reset_qr_prod" id="btn_reset_qr_prod" name="btn_reset_qr_prod" class="btn btn-danger">Reset DNTH PD QR</a>
+    <a href="/dnth_data/delete_dnth_data" id="btn_delete_dnth_data" name="btn_delete_dnth_data" class="btn btn-danger">DELETE DNTH DATA</a>
 
 
     <script>
