--- a/views/master_setting.ejs
+++ b/views/master_setting.ejs
@@ -19,6 +19,8 @@
         <a href="/admin_page/receive_scan_master">Receive Scan</a>
         <a href="/dnth_data">DNTH Data</a>
         <a href="/pc_page">PC Page</a>
+        <a href="/prod_page">PD Page</a>
+        <a href="/create_pl">Create PL</a>
         <a href="/logout">Logout</a>
     </div>
 
@@ -80,6 +82,7 @@
             </table>
             <div>
                 <button class="btn btn-primary" type="submit">Add Master Packing List</button>
+                <a href="/admin_page/master_setting/reset_dnth_receive" class="btn btn-danger">Reset DNTH Received</a>
             </div>
         </form>
     </div>
