--- a/views/prod_input.ejs
+++ b/views/prod_input.ejs
@@ -4,10 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
 </head>
 <body>
-
     <div class="header">
         <a href="/admin_page">Home</a>
         <a href="/admin_page/master_main">Master Main</a>
@@ -20,25 +18,24 @@
     </div>
 
     <div>
-        <table class="table">
-            <thead>
-                <tr>
-                    <th>NO.</th>
-                    <th>QR PACKING LIST</th>
-                </tr>
-            </thead>
-            <tbody>
-                <% let count = 0; %>
-                <% qr_packingList.forEach((row) => { %>
-                    <% count++; %>
-                <tr>
-                    <td><%= count %></td>
-                    <td><%= row.qr_packingList %></td>
-                </tr>
-                <% }) %>
-            </tbody>
-        </table>
+        <h1>QR Production Details</h1>
     </div>
+    <hr>
+
+    <table class="table">
+        <thead>
+            <tr>
+                <th>QR PACKING IN</th>
+                <th>QR KANBAN IN</th>
+                <th>PART NUMBER</th>
+                <th>QTY</th>
+                <th>QR PRODUCTION</th>
+            </tr>
+        </thead>
+        <tbody>
+            <% 
+        </tbody>
+    </table>
     
 </body>
 </html>
