--- a/views/prod_page.ejs
+++ b/views/prod_page.ejs
@@ -40,6 +40,12 @@
             border-radius: 10px 10px;
             animation: blink 0.5s infinite;
         }
+        .finished-status {
+            width: 20px;
+            height: 20px;
+            border-radius: 10px 10px;
+            background-color: green;
+        }
     </style>
 </head>
 <body>
@@ -52,6 +58,7 @@
         <a href="/dnth_data">DNTH Data</a>
         <a href="/pc_page">PC Page</a>
         <a href="/prod_page">PD Page</a>
+        <a href="/create_kanban_out">Create KB Out</a>
         <a href="/logout">Logout</a>
     </div>
 
@@ -64,7 +71,7 @@
     </div>
 
     <div>
-        <h1>Scan QR Master Packing List</h1>
+        <h1>Scan QR Production Input</h1>
     </div>
 
     <div>
@@ -91,6 +98,7 @@
                     <th>TIME IN PD</th>
                     <th>DATE OUT PD</th>
                     <th>TIME OUT PD</th>
+                    <th>TOTAL OK QTY</th>
                     <th>OPERATOR</th>
                     <th>STATUS</th>
                     <!-- <th>QR PRODUCTION</th> -->
@@ -118,13 +126,21 @@
                             <input type="text" id="time_out_prod" name="time_out_prod[]" value="<%= row.time_out_prod %>" readonly>
                         </td>
                         <td>
+                            <input type="text" id="total_ok_prod" name="total_ok_prod[]" value="<%= row.total_ok_prod %>" readonly>
+                        </td>
+                        <td>
                             <input type="text" id="operator" name="operator[]" value="<%= row.operator %>" readonly>
                         </td>
                         <td>
-                            <% if (row.date_in_prod) { %>
+                            <% if (row.date_in_prod && !row.date_out_prod) { %>
                               <div class="working-status"></div>
                             <% } else { %>
                               <!-- Show nothing if date_in_prod is null -->
+                            <% } %>
+                            <% if (row.date_in_prod && row.date_out_prod) { %>
+                                <div class="finished-status"></div>
+                            <% } else { %>
+                                <!-- Show nothing if date_in_prod is null -->
                             <% } %>
                         </td>
                         <td></td>
