--- a/views/dnth_data.ejs
+++ b/views/dnth_data.ejs
@@ -33,7 +33,7 @@
                 <th>KANBAN TIME IN</th>
                 <th>QTY</th>
                 <th>PART NUMBER</th>
-                <th>TOTAL QTY EACH PN</th>
+                <!-- <th>TOTAL QTY EACH PN</th> -->
                 <th>DNTH QR PRODUCTION</th>
                 
                 <!-- <th>COUNT BOX</th> -->
@@ -53,7 +53,7 @@
                 <td><%= dnth_data.kanban_time_in %></td>
                 <td><%= dnth_data.qty_kanban_in %></td>
                 <td><%= dnth_data.partNumber %></td>
-                <td><%= dnth_data.totalQtyIn %></td>
+                <!-- <td><%= dnth_data.totalQtyIn %></td> -->
                 <td><%= dnth_data.qr_prod %></td>
                 <td>
                     <a class="btn btn-primary" href="#">Edit</a>
