--- a/views/master_setting.ejs
+++ b/views/master_setting.ejs
@@ -93,8 +93,14 @@
         // document.getElementById('no').innerText = 1;
 
         function confirmDelete(qrBox) {
-            if (confirm('Are you sure you want to delete this item?')) {
-                window.location.href = '/admin_page/master_setting/delete?qr_box=' + qrBox; // Proceed with deletion
+            var result = confirm("Are you sure you want to delete this record?");
+
+            if (result) {
+            // Proceed with the delete operation
+            window.location.href = `/admin_page/master_setting/delete?qr_box=${master_data.qr_box}&qr_packigList=${master_data.qr_packingList}`;
+            } else {
+            // Cancel the delete operation
+            return false;
             }
         }
     </script>
